--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,16 @@
   <title>Apipokemons</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body >
+  <div >
+    <div style="opacity: 0.2; height: 2rem !important;width: 100%;" >
+        <img src='https://images8.alphacoders.com/548/548142.jpg' style="width:100%;"/>
+    </div>
+    <app-root></app-root>
+
+  </div>
 </body>
 </html>
